Wed Jan 21 11:45:00 1998  Richard Frith-Macdonald  <richard@brainstorm.co.uk>

	* src/GetDefEncoding.m: Modified GetDefEncoding() to us the NSString
	method - ([+availableStringEncodings]) so we can make the
	_availableEncodings array local to NSString.m

	* src/NSString.m: Moved _availableEncodings here from NSString.h
	Added methods as specified in Rhapsody documentation -
	([+pathWithComponents:]), ([-isAbsolutePath]), ([-pathComponents]),
	([-stringsByAppendingPaths:])

	* src/include/NSString.h: Moved _availableEncodings from here to
	NSString.m and added declarations for new methods -
	([+pathWithComponents:]), ([-isAbsolutePath]), ([-pathComponents]),
	([-stringsByAppendingPaths:])

Wed Jan 21 09:41:46 1998  Adam Fedor  <fedor@spanky.doc.com>

	* src/Makefile.postamble: Change $(LEX) to $(FLEX) and $(YACC) to
	$(BISON). Add $(GNUSTEP_OBJC_DIR) to targets with ${OEXT}.

Tue Jan 20 19:05:00 1998  Richard Frith-Macdonald  <richard@brainstorm.co.uk>

	* Tools/GNUmakefile: Added defaults.m

	* Tools/defaults.m: New file defaults.m - command line tool like the
	OPENSTEP defaults command. Renders dread, dwrite and dremove obsolete.

	* Tools/dread.m: Added -u flag and made numerous bug fixes.

	* Tools/dremove.m: Added -u flag and made numerous bug fixes.

	* Tools/dwrite.m: Added -u flag and made numerous bug fixes.

	* checks/GNUmakefile (TEST_TOOL_NAME): Add nstask.
	* checks/nsdate.m: Added some year-2000 tests.
	* checks/nstask.m: New file.

	* src/Dictionary.m: Removed ([-descriptionWithIndent:]) and the
	([-description]) methods - no longer needed for property lists.

	* src/GNUmakefile: Added NSTask

	* src/GetDefEncoding.m: Fixed so that the encoding that is read from
	the environment is accepted.

	* src/Heap.m: Added implementation of ([-minObject]) to take
 	advantage of the known ordering of a heap - fixes performance
 	problem with large numbers of timers in NSRunLoop.

	* src/NSArray.m: Implemented many new methods for OPENSTEP -