@@ -427,6 +427,7 @@ property list which is set as the value of a default.\n\n");
 		    domain = [NSMutableDictionary dictionaryWithCapacity:1];
 		}
 		[domain setObject: obj forKey: name];
+	        [defs setPersistentDomain: domain forName: owner];
 	    }
 	}
 	else {
@@ -469,8 +470,8 @@ property list which is set as the value of a default.\n\n");
 		    exit(0);
 		}
 	    }
+	    [defs setPersistentDomain: domain forName: owner];
 	}
-	[defs setPersistentDomain: domain forName: owner];
 
 	if ([defs synchronize] == NO) {
 	    NSLog(@"defaults: unable to write to defaults database - %s\n",
